# thecyclops

./: .gitignore  CMakeLists.txt  README.md  build.py  config.yml  env.txt  run.py
Applications/: CMakeLists.txt
Applications/Main/: CMakeLists.txt
Applications/Main/Source/: 01_hello_SDL.cpp  02_getting_an_image_on_the_screen.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  06_extension_libraries_and_loading_other_image_formats.cpp  07_texture_loading_and_rendering.cpp  08_geometry_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  12_color_modulation.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  15_rotation_and_flipping.cpp  16_true_type_fonts.cpp  17_mouse_events.cpp  18_key_states.cpp  22_timing.cpp  23_advanced_timers.cpp  24_calculating_frame_rate.cpp  25_capping_frame_rate.cpp  26_motion.cpp  27_collision_detection.cpp  28_per-pixel_collision_detection.cpp  29_circular_collision_detection.cpp  30_scrolling.cpp  31_scrolling_backgrounds.cpp  32_text_input_and_clipboard_handling.cpp  33_file_reading_and_writing.cpp  38_particle_engines.cpp  39_tiling.cpp  40_texture_manipulation.cpp  41_bitmap_fonts.cpp  42_texture_streaming.cpp  43_render_to_texture.cpp  44_frame_independent_movement.cpp  45_timer_callbacks.cpp  Cyclops.cpp  main.cpp
CMake/: cyclops.cmake
Libraries/: CMakeLists.txt
Libraries/Application/: CMakeLists.txt
Libraries/Application/Include/Application/: BaseApplication.h  CyclopsApplication.h  SDLApplication.h
Libraries/Application/Source/: BaseApplication.cpp  CyclopsApplication.cpp  SDLApplication.cpp
Libraries/Math/: CMakeLists.txt
Libraries/Math/Include/Math/: vector3.hpp
Libraries/Math/Source/: vector3.cpp
Libraries/ScriptManager/: CMakeLists.txt
Libraries/ScriptManager/Include/ScriptManager/: Server.h
Libraries/ScriptManager/Source/: Server.cpp
