SET (PRIVATE_INCLUDE_DIRS Source)

SET (PUBLIC_INCLUDE_DIRS Include)

FILE ( GLOB_RECURSE
       INCLUDE_FILES
       Include/**
      )


####################### CUSTOMIZE LIBRARY BUILD ########################
SET (TARGET_NAME Application)

#SET ( SOURCE_FILES
#    Source/CyclopsApplication.cpp
#    )
FILE ( GLOB_RECURSE
       SOURCE_FILES
       Source/**
      )

########################################################################



ADD_LIBRARY( ${TARGET_NAME}_static
    STATIC
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
    )

SET_TARGET_PROPERTIES(${TARGET_NAME}_static PROPERTIES OUTPUT_NAME ${TARGET_NAME})
#SET_TARGET_PROPERTIES(${TARGET_NAME}_static PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s ALLOW_MEMORY_GROWTH=1")

#PRIVATE and PUBLIC items will populate the INCLUDE_DIRECTORIES property of <target>.
#PUBLIC and INTERFACE items will populate the INTERFACE_INCLUDE_DIRECTORIES property of <target>.
#TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME} PUBLIC ${PUBLIC_INCLUDE_DIRS} PRIVATE ${PRIVATE_INCLUDE_DIRS})
#TARGET_COMPILE_DEFINITIONS (${TARGET_NAME} PRIVATE BUILDING_${TARGET_NAME} INTERFACE USING_${TARGET_NAME})
TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME}_static PUBLIC ${PUBLIC_INCLUDE_DIRS} PRIVATE ${PRIVATE_INCLUDE_DIRS})
TARGET_COMPILE_DEFINITIONS (${TARGET_NAME}_static PRIVATE BUILDING_${TARGET_NAME}_static INTERFACE USING_${TARGET_NAME}_static)

IF (BUILD_UNIT_TESTS)
    ADD_GMOCK_TEST(${TARGET_NAME} Tests/main.cpp)
ENDIF()

INSTALL (TARGETS ${TARGET_NAME}_static ARCHIVE DESTINATION lib COMPONENT Runtime)

#INSTALL (TARGETS ${TARGET_NAME} LIBRARY DESTINATION lib COMPONENT Runtime)
INSTALL (DIRECTORY Include/${TARGET_NAME} DESTINATION api/include)